[gd_scene load_steps=14 format=2]

[ext_resource path="res://screens/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/title-spritesheet.png" type="Texture" id=2]
[ext_resource path="res://assets/images/start-button.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "title",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 30 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 30 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 30 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 30 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Control"]
pause_mode = 2
margin_left = -144.489
margin_top = -148.651
margin_right = -104.489
margin_bottom = -108.651
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 984.0
margin_bottom = 568.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 272.493, 259.33 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 7 )
animation = "title"
frame = 1
playing = true

[node name="Button" type="Button" parent="."]
margin_left = 225.131
margin_top = 349.837
margin_right = 323.131
margin_bottom = 393.837
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="Button"]
position = Vector2( 48.2601, 18.5616 )
frames = SubResource( 12 )
frame = 3
speed_scale = 1.2
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
